--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -45,6 +45,7 @@ html(lang="en")
         <!-- modal -->
         include layout/modal.pug
         include layout/modal-video.pug
+        include layout/confidentiality-policy.pug
         <!-- modal end-->                  
         
         <!--build:js js/main.min.js -->
