--- a/app/scss/global.scss
+++ b/app/scss/global.scss
@@ -29,3 +29,4 @@
 @import "modules/_page-gallery";
 @import "modules/_page-gallery-opened";
 @import "modules/_page-apartments";
+@import "modules/_policy";
