--- a/app/scss/layout/_general.scss
+++ b/app/scss/layout/_general.scss
@@ -49,7 +49,7 @@ button::-moz-focus-inner {
 }
 
 .container {
-    //margin: 0 auto;
+    margin: 0 auto;
     padding: 0 10px;
     max-width: 1250px;
     @media (max-width: 1366px) {
@@ -59,9 +59,6 @@ button::-moz-focus-inner {
         max-width: 880px;
     }
     @media (max-width: 1024px) {
-        max-width: 960px;
-    }
-    @media (max-width: 960px) {
         max-width: 680px;
     }
     @media (max-width: 768px) {}
