--- a/app/scss/layout/_typography.scss
+++ b/app/scss/layout/_typography.scss
@@ -147,7 +147,7 @@ a {
             svg {
                 @include size(8px, 16px);
                 top: -9px;
-                left: 1px;
+                left: 15px;
             }
             &:after {
                 @include size(40px);
@@ -218,23 +218,11 @@ a {
 
 section {
     overflow: hidden;
-    padding: 100px 0 100px 210px;
-    // &::before {
-    //     content: '';
-    //     display: block;
-    //     @include pos($t: 0, $l: 0);
-    //     position: relative;
-    //     width: 210px;
-    //     height: 100%;
-    // }
-    //background: linear-gradient(90deg, rgba(0, 0, 0, .1), hsla(0, 0%, 80%, 0) 40%), linear-gradient(270deg, rgba(0, 0, 0, .1), hsla(0, 0%, 50.2%, 0) 47.55%);
+    padding: 40px 0;
     background: #f5f5f4;
-    @media (max-width: 576px) {
-        padding: 40px 0;
+    @media (min-width: 1025px) {
+        padding: 100px 0;
         background: #E5E5E5;
-    }
-    @media (max-width: 812px) and (orientation: landscape) {
-        padding: 40px 0;
     }
 }
 
