--- a/app/scss/modules/_footer.scss
+++ b/app/scss/modules/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
-    padding: 100px 0 50px 210px;
+    padding: 100px 0 50px 0;
     //background: linear-gradient(90deg, rgba(0, 0, 0, .1), hsla(0, 0%, 80%, 0) 40%), linear-gradient(270deg, rgba(0, 0, 0, .1), hsla(0, 0%, 50.2%, 0) 47.55%);
     background: #f5f5f4;
     color: #0D0D0D;
@@ -62,6 +62,9 @@
         @media (max-width: 960px) {
             font-size: 13px;
         }
+        @media (max-width: 1025px) {
+            font-size: 13px;
+        }
     }
     &-logo {
         grid-column: 6 / 8;
@@ -114,6 +117,9 @@
         }
         @media (max-width: 960px) {
             font-size: 16px;
+        }
+        @media (max-width: 1025px) {
+            font-size: 18px;
         }
     }
     &-btn {
@@ -175,6 +181,10 @@
             @media (max-width: 960px) {
                 font-size: 14px;
                 padding: 0 1.3rem;
+            }
+            @media (max-width: 1025px) {
+                font-size: 14px;
+                padding: 0 .5rem;
             }
         }
         @media (max-width: 576px) {
@@ -311,6 +321,7 @@
         &__form {
             display: grid;
             grid-template-columns: repeat(6, 1fr);
+            height: 100%;
             @media (max-width: 576px) {
                 display: flex;
                 flex-direction: column;
@@ -347,11 +358,17 @@
                 margin: 0 0 30px 0;
                 text-align: center;
             }
+            @media (max-width: 1025px) {
+                font-size: 14px;
+            }
         }
         &__title {
             grid-column: 1 / 3;
             grid-row: 2/3;
             font-size: 18px;
+            @media (max-width: 1025px) {
+                font-size: 14px;
+            }
         }
         &__field {
             grid-column: 1 / 4;
@@ -380,6 +397,7 @@
             margin: 0 0 0 1rem;
             height: 50px;
             cursor: pointer;
+            align-self: flex-end;
             @media (max-width: 576px) {
                 font-size: 16px;
                 line-height: 20px;
@@ -389,6 +407,10 @@
                 font-size: 16px;
                 line-height: 20px;
                 margin: 0 auto;
+            }
+            @media (max-width: 1025px) {
+                font-size: 14px;
+                padding: 0 .5rem;
             }
             // @media (max-width: 960px) {
             //     font-size: 12px;
