--- a/app/scss/modules/_section-objects.scss
+++ b/app/scss/modules/_section-objects.scss
@@ -9,6 +9,9 @@
     }
     &__title {
         position: relative;
+        @media (max-width: 576px) {
+            height: 150px;
+        }
         .grid {
             @include pos($t: 0, $l: 0);
         }
@@ -73,6 +76,10 @@
             grid-column: 1/13;
             grid-row: 5/6;
             margin: 30px 0 50px 0;
+            height: unset;
+        }
+        @media (max-width: 1025px) {
+            height: unset;
         }
         // @media (max-width: 812px) and (orientation: landscape) {
         //     grid-column: 1/13;
