form validation fix;

--- a/app/pug/layout/footer.pug
+++ b/app/pug/layout/footer.pug
@@ -21,7 +21,7 @@
             form(action="").footer-newsletter__form
                 h5.footer-newsletter__headline Будьте в курсе спецпредложений   
                 label( for="newsletter").footer-newsletter__title Ваш e-mail
-                input#newsletter(type="text").footer-newsletter__field
+                input#newsletter(type="email").footer-newsletter__field
                 button(type="submit").btn.footer-newsletter__btn Хочу быть в курсе!
             //FORM END          
         a.arrow-btn.footer-btn(href="#")
