--- a/app/pug/layout/section-contact.pug
+++ b/app/pug/layout/section-contact.pug
@@ -5,13 +5,13 @@
             input#contact-username(type="text" required).contact-form__field
             span.alert__text.contact__user-text Ваше имя не указано
         label( for="contact-tel" ).contact-form__title Телефон
-            input#contact-tel(type="tel" required placeholder="+380" pattern="[\+]\d{3}\s[\(]\d{2}[\)]\s\d{3}[\-]\d{2}[\-]\d{2}").contact-form__field
+            input#contact-tel(type="tel" required value="+380" minlength="13" pattern="[\+]\d{3}\s[\(]\d{2}[\)]\s\d{3}[\-]\d{2}[\-]\d{2}").contact-form__field
             span.alert__text.contact__tel-text Телефон не указан
         label( for="email").contact-form__title EMAIL (НЕ ОБЯЗАТЕЛЬНО)
             input#email(type="email").contact-form__field
         label( for="contact-check").contact-form__checkbox.contact-form__title Я даю согласие на обработку моих персональных данных согласно 
             input#contact-check(type="checkbox" checked).contact-form__field 
             .contact-form__custom-check
-            a(href="#").contact-form__link политике конфиденциальности 
+            .contact-form__link политике конфиденциальности 
             span.alert__text.contact__check-text Обязательное поле 
         button(type="submit").btn.contact-form__btn Отправить запрос
