--- a/app/scss/modules/_footer.scss
+++ b/app/scss/modules/_footer.scss
@@ -377,7 +377,7 @@
             background: transparent;
             line-height: 1.2rem;
             border-bottom: 1px solid #828282;
-            padding: .1rem .5rem;
+            padding: .1rem 0;
             color: #514947;
             @media (max-width: 576px) {
                 margin: 0 0 30px 0;
