--- a/app/pug/arcticle.pug
+++ b/app/pug/arcticle.pug
@@ -35,11 +35,11 @@ html(lang="en")
                     //MOBILE LOGO END
                     h2.title Статья
                     //h3.headline Важная информация со статьями и новостями от angro
-                    a.arrow-btn.arrow-btn--left(href="#")
+                    a.arrow-btn.arrow-btn--left(href="blog.html")
                         .arrow-btn__icon
                             svg.icon
                                 use(xlink:href="images/main-page_icons-sprite.svg#arrow")
-                        p.arrow-btn__text Объекты
+                        p.arrow-btn__text Блог
 
         //HEADER END
         //CONTENT START
