--- a/app/pug/gallery-opened.pug
+++ b/app/pug/gallery-opened.pug
@@ -40,7 +40,7 @@ html(lang="en")
                         .arrow-btn__icon
                             svg.icon
                                 use(xlink:href="images/main-page_icons-sprite.svg#arrow")
-                        p.arrow-btn__text Объекты
+                        p.arrow-btn__text Галерея
         //HEADER END
         //CONTENT START
         section.gallery-opened-content
