--- a/app/scss/modules/_footer.scss
+++ b/app/scss/modules/_footer.scss
@@ -6,7 +6,7 @@
     overflow: hidden;
     @media (max-width: 576px) {
         padding: 30px 0 50px 0;
-        background: #E5E5E5;
+        //background: #E5E5E5;
     }
     @media (max-width: 812px) and (orientation: landscape) {
         padding: 30px 0 50px 0;
