--- a/app/scss/modules/_page-blog.scss
+++ b/app/scss/modules/_page-blog.scss
@@ -1,6 +1,6 @@
 .blog-header {
     background: #F5F5F4;
-    padding: 0 0 40px 210px;
+    padding: 0 0 40px 0;
     .mobile-logo {
         top: 100px;
         @media (max-width: 576px) {
@@ -32,7 +32,7 @@
 }
 
 .blog {
-    padding: 0 0 0 210px;
+    padding: 0 0 0 0;
     background: #F5F5F4;
 }
 
@@ -51,23 +51,57 @@
         &__headline {
             padding: 0;
             margin: 0 0 1rem 0;
+            font-family: Century Gothic;
+            font-style: normal;
+            font-weight: bold;
+            font-size: 24px;
+            line-height: 29px;
         }
         @media (min-width: 1025px) {
-            margin: 40px 25px 25px 50px;
+            margin: 40px 125px 40px 70px;
             &__headline {
+                font-family: Century Gothic;
+                font-style: normal;
+                font-weight: bold;
                 font-size: 36px;
                 line-height: 44px;
+                margin: 0 0 50px;
             }
-            .text {
+        }
+        .text {
+            font-size: 24px;
+            line-height: 30px;
+            margin: 0 0 1rem;
+            font-family: Bellota Text;
+            font-style: italic;
+            font-weight: normal;
+            font-size: 16px;
+            line-height: 20px;
+            @media (min-width: 1025px) {
+                font-family: Bellota Text;
+                font-style: italic;
+                font-weight: normal;
                 font-size: 24px;
                 line-height: 30px;
-                margin: 0 0 1rem;
             }
         }
     }
     .date {
-        margin: 10px 0 30px;
+        margin: 25px 0 30px;
         padding: 0;
+        font-family: Century Gothic;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 16px;
+        line-height: 20px;
+        @media (min-width: 1025px) {
+            font-family: Century Gothic;
+            font-style: normal;
+            font-weight: normal;
+            font-size: 19px;
+            line-height: 23px;
+            margin: 0 0 30px;
+        }
     }
     .price {
         display: none;
@@ -84,6 +118,10 @@
             display: block;
             background: transparent;
             line-height: 20px;
+            tbody {
+                display: flex;
+                flex-direction: column;
+            }
         }
         tr {
             display: grid;
@@ -106,7 +144,7 @@
         }
     }
     .photo {
-        margin: 20px -20px 0;
+        margin: 20px -25px 0;
         height: 280px;
         position: relative;
         overflow: hidden;
@@ -128,7 +166,7 @@
     }
     .information__btn {
         background: #423C3A;
-        margin: 0 -20px 0;
+        margin: 0 -25px 0;
         padding: 20px;
         display: flex;
         justify-content: center;
@@ -141,14 +179,31 @@
             height: 110px;
         }
         .arrow-btn__text {
-            line-height: 20px;
+            font-family: Century Gothic;
+            font-style: normal;
+            font-weight: normal;
             font-size: 16px;
+            line-height: 20px;
+            /* identical to box height */
+            letter-spacing: 0.05em;
+            text-transform: uppercase;
+            @media (min-width: 1025px) {
+                font-family: Century Gothic;
+                font-style: normal;
+                font-weight: normal;
+                font-size: 19px;
+                line-height: 23px;
+                text-align: right;
+                letter-spacing: 0.05em;
+                text-transform: uppercase;
+            }
         }
     }
     .container {
         display: grid;
         box-shadow: 7px 7px 15px rgba(0, 0, 0, 0.15);
         background: #FFFFFF;
+        padding: 0 25px;
         @media (min-width: 1025px) {
             grid-template-columns: 65% auto;
             grid-template-rows: auto 110px;
