--- a/app/scss/modules/_page-gallery.scss
+++ b/app/scss/modules/_page-gallery.scss
@@ -1,5 +1,5 @@
 .gallery-header {
-    padding: 0 0 40px 210px;
+    padding: 0 0 40px 0;
     background: #F5F5F4;
     .mobile-logo {
         top: 100px;
@@ -34,6 +34,7 @@
 .gallery-list {
     display: flex;
     flex-direction: column;
+    background: #f5f5f4;
     .container {
         padding: 0;
     }
@@ -124,5 +125,11 @@
                 }
             }
         }
+    }
+}
+
+.gallery-body {
+    footer {
+        background: #f5f5f4;
     }
 }
