styles fix; js fix; flatris fix;

--- a/app/layout/sidebar.html
+++ b/app/layout/sidebar.html
@@ -12,7 +12,7 @@
     <div class="sidebar-menu">
       <div class="sidebar-menu__triger">Меню</div>
     </div>
-    <div class="sidebar-icons"><a class="sidebar-icons__item" href="apartments.html">
+    <div class="sidebar-icons"><a class="sidebar-icons__item" href="#">
         <svg class="sidebar-icons__icon">
           <use xlink:href="images/main-page_icons-sprite.svg#apartament"></use>
         </svg></a><a class="sidebar-icons__item" href="tel:+380509915880">
