--- a/app/pug/gallery.pug
+++ b/app/pug/gallery.pug
@@ -111,6 +111,9 @@ html(lang="en")
         <!-- modal -->
         include object/object-modal.pug
         include layout/modal.pug
+        //policy SATRT
+        include layout/confidentiality-policy.pug
+        //policy END
         <!-- modal end-->                  
         
         <!--build:js js/main.min.js -->
