--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -45,7 +45,9 @@ html(lang="en")
         <!-- modal -->
         include layout/modal.pug
         include layout/modal-video.pug
+        //policy SATRT
         include layout/confidentiality-policy.pug
+        //policy END
         <!-- modal end-->                  
         
         <!--build:js js/main.min.js -->
