--- a/app/pug/layout/sidebar.pug
+++ b/app/pug/layout/sidebar.pug
@@ -14,7 +14,7 @@
         .sidebar-menu
             .sidebar-menu__triger Меню
         .sidebar-icons
-            a.sidebar-icons__item(href="apartments.html")
+            a.sidebar-icons__item(href="#")
                 svg.sidebar-icons__icon
                     use(xlink:href="images/main-page_icons-sprite.svg#apartament")
             a.sidebar-icons__item(href="tel:+380509915880")
