--- a/app/scss/modules/_page-article.scss
+++ b/app/scss/modules/_page-article.scss
@@ -61,6 +61,7 @@
         }
     }
     .information {
+        padding: 40px 0;
         &__headline {
             font-weight: bold;
             font-size: 24px;
