--- a/app/scss/modules/_page-object__modal.scss
+++ b/app/scss/modules/_page-object__modal.scss
@@ -13,20 +13,24 @@
     width: 100%;
     height: 100%;
     overflow: auto;
-    background: rgba(66, 60, 58, 1);
+    //background: rgba(66, 60, 58, 0.7);
+    background: rgb(123, 119, 117);
+    ;
     color: #FFFFFF;
     &__close {
+        grid-column: 1/3;
+        grid-row: 4/5;
         display: flex;
         align-items: center;
         margin: 0 0 40px 50px;
         @media (min-width: 1025px) {
-            grid-row: 3/4;
+            grid-row: 2/3;
             grid-column: 1/2;
             margin: 0 0 0 30px;
             align-items: center;
         }
-        @media (max-width: 1366px) {
-            grid-row: 2/3;
+        @media (min-width: 1366px) {
+            grid-row: 3/4;
         }
         .close {
             @include size(40px);
@@ -55,8 +59,8 @@
             &:before,
             &:after {
                 @media (min-width: 1025px) {
-                    @include pos($t: 14px, $r: 36px);
-                    @include size(2px, 45px)
+                    @include pos($t: 10px, $r: 32px);
+                    @include size(2px, 45px);
                 }
             }
         }
@@ -71,15 +75,16 @@
         //margin: 0 0 15px 50px;
         margin: 0 0 15px 39px;
         @media (min-width: 1025px) {
-            grid-row: 3/4;
+            grid-row: 2/3;
             grid-column: 2/3;
             margin: 0;
             display: flex;
             justify-content: center;
             align-items: center;
+            margin: 0 0 0 30px;
         }
-        @media (max-width: 1366px) {
-            grid-row: 2/3;
+        @media (min-width: 1366px) {
+            grid-row: 3/4;
         }
     }
     .arrow-btn {
@@ -91,6 +96,8 @@
         height: unset;
         margin: 0;
         font-size: 18px;
+        grid-column: 1/3;
+        grid-row: 3/4;
         @media (max-width: 1025px) {
             &__icon {
                 svg {
@@ -124,7 +131,10 @@
         }
     }
     .information {
-        margin: 0 15px;
+        margin: 0;
+        overflow: hidden;
+        grid-row: 1/2;
+        grid-column: 1/3;
         @media (min-width: 1025px) {
             grid-row: 1/2;
             grid-column: 1/2;
@@ -135,9 +145,12 @@
             line-height: 29px;
             margin: 0 25px;
             @media (min-width: 1025px) {
+                font-family: Century Gothic;
+                font-style: normal;
+                font-weight: bold;
                 font-size: 36px;
                 line-height: 44px;
-                margin: 0 25px 40px;
+                margin: 0 0 40px;
             }
         }
         p {
@@ -151,13 +164,27 @@
                 margin: 0 25px 40px;
             }
         }
+        .text {
+            margin: 50px 25px 30px;
+            @media (min-width: 1025px) {
+                font-family: Bellota Text;
+                font-style: italic;
+                font-weight: normal;
+                font-size: 24px;
+                line-height: 30px;
+                margin: 0 0 30px;
+            }
+        }
     }
     .date {
-        margin: 15px 25px;
+        margin: 30px 25px;
         @media (min-width: 1025px) {
+            margin: 40px 0;
+            font-family: Century Gothic;
+            font-style: normal;
+            font-weight: normal;
             font-size: 19px;
             line-height: 23px;
-            margin: 40px 25px;
         }
     }
     .photo {
@@ -165,31 +192,40 @@
         height: 260px;
         position: relative;
         overflow: hidden;
+        //grid-row: 2/3;
+        grid-column: 1/3;
         @media (min-width: 1025px) {
             grid-row: 1/2;
             grid-column: 2/3;
-            height: 600px;
-            margin: 20px 50px;
+            height: 100%;
+            margin: 0 50px;
+            align-self: flex-end;
+            display: flex;
+            align-items: flex-end;
         }
         .img {
             @include size(100%, auto);
-            @media (min-width: 1025px) {
-                @include pos($b: 50%, $l: 50%);
-                transform: translateX(-50%) translateY(50%);
-                @include size(115%, auto);
-            }
+            // @media (min-width: 1025px) {
+            //     @include pos($b: 50%, $l: 50%);
+            //     transform: translateX(-50%) translateY(50%);
+            //     @include size(125%, auto);
+            // }
         }
     }
     .price {
         font-size: 14px;
         line-height: 26px;
         color: #423C3A;
-        background: #FFFFFF;
+        //background: #FFFFFF;
         overflow: hidden;
         width: 100%;
         @media (min-width: 1025px) {
-            margin: 0 25px;
             background: transparent;
+            font-family: Bellota Text;
+            font-style: normal;
+            font-weight: 400;
+            font-size: 24px;
+            line-height: 41px;
         }
         tr {
             display: grid;
@@ -203,6 +239,13 @@
             background: #FFF3A6;
             text-align: left;
             padding: 0 0 0 5px;
+            @media (min-width: 1025px) {
+                font-family: Bellota Text;
+                font-style: normal;
+                font-weight: bold;
+                font-size: 24px;
+                line-height: 41px;
+            }
         }
         td {
             margin: 0;
@@ -212,23 +255,23 @@
     }
 }
 
-.photo {
-    margin: 20px 0 40px 0;
-    height: 260px;
-    position: relative;
-    overflow: hidden;
-    @media (min-width: 1025px) {
-        grid-row: 1/2;
-        grid-column: 2/3;
-        height: 600px;
-        margin: 20px 50px;
-    }
-    .img {
-        @include size(100%, auto);
-        @media (min-width: 1025px) {
-            @include pos($b: 50%, $l: 50%);
-            transform: translateX(-50%) translateY(50%);
-            @include size(115%, auto);
-        }
-    }
-}
+// .photo {
+//     margin: 20px 0 40px 0;
+//     height: 260px;
+//     position: relative;
+//     overflow: hidden;
+//     @media (min-width: 1025px) {
+//         grid-row: 1/2;
+//         grid-column: 2/3;
+//         height: 600px;
+//         margin: 20px 50px;
+//     }
+//     .img {
+//         @include size(100%, auto);
+//         @media (min-width: 1025px) {
+//             @include pos($b: 50%, $l: 50%);
+//             transform: translateX(-50%) translateY(50%);
+//             @include size(115%, auto);
+//         }
+//     }
+// }
