add pading for section; button disabled in modal window;

--- a/app/pug/object-opened.pug
+++ b/app/pug/object-opened.pug
@@ -192,22 +192,22 @@ html(lang="en")
                 .content-galery.grid
                     .content-headline
                         h3.content-headline__text Этапы строительства
-                .object-opened-slider
+                .object-opened-slider#object-opened-slider
                     //SLIDER TILE
-                    .object-opened__tile
-                        img(src="images/object/IMG_1.jpg")
+                    a(href="images/object/IMG_1.jpg").object-opened__tile
+                        img.tile__thumb(src="images/object/IMG_1.jpg")
                     //SLIDER TILE
-                    .object-opened__tile
-                        img(src="images/object/IMG_2.jpg")
+                    a(href="images/object/IMG_2.jpg").object-opened__tile
+                        img.tile__thumb(src="images/object/IMG_2.jpg")
                     //SLIDER TILE
-                    .object-opened__tile
-                        img(src="images/object/IMG_3.jpg")
+                    a(href="images/object/IMG_3.jpg").object-opened__tile
+                        img.tile__thumb(src="images/object/IMG_3.jpg")
                     //SLIDER TILE
-                    .object-opened__tile
-                        img(src="images/object/IMG_1.jpg")
+                    a(href="images/object/IMG_1.jpg").object-opened__tile
+                        img.tile__thumb(src="images/object/IMG_1.jpg")
                     //SLIDER TILE
-                    .object-opened__tile
-                        img(src="images/object/IMG_2.jpg")
+                    a(href="images/object/IMG_2.jpg").object-opened__tile
+                        img.tile__thumb(src="images/object/IMG_2.jpg")
                             
         section#info.contact
             include layout/section-contact.pug
