--- a/app/scss/modules/_page-apartments.scss
+++ b/app/scss/modules/_page-apartments.scss
@@ -1,6 +1,6 @@
 .apartments-header {
     background: #F5F5F4;
-    padding: 0 0 30px 0;
+    padding-bottom: 40px;
     .mobile-logo {
         top: 100px;
         @media (max-width: 576px) {
