--- a/app/scss/modules/_page-gallery.scss
+++ b/app/scss/modules/_page-gallery.scss
@@ -1,5 +1,5 @@
 .gallery-header {
-    padding: 0 0 40px 0;
+    padding-bottom: 40px;
     background: #F5F5F4;
     .mobile-logo {
         top: 100px;
@@ -125,11 +125,5 @@
                 }
             }
         }
-    }
-}
-
-.gallery-body {
-    footer {
-        background: #f5f5f4;
     }
 }
