--- a/app/scss/layout/_typography.scss
+++ b/app/scss/layout/_typography.scss
@@ -248,4 +248,58 @@ section {
 }
 
 //checkbox
-//slick
+body {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+}
+
+section {
+    flex-grow: 1;
+    @media (min-width: 1025px) {
+        padding-left: 170px;
+    }
+    @media (min-width: 1201px) {
+        padding-left: 170px;
+    }
+    @media (min-width: 1367px) {
+        padding-left: 210px;
+    }
+    @media (min-width: 1601px) {
+        padding-left: 0;
+    }
+}
+
+footer {
+    @media (min-width: 1025px) {
+        padding: 100px 0 50px 170px;
+    }
+    @media (min-width: 1201px) {
+        padding: 100px 0 50px 210px;
+    }
+    @media (min-width: 1367px) {
+        //padding-left: 210px;
+    }
+    @media (min-width: 1601px) {
+        padding-left: 0;
+    }
+}
+
+.object-header,
+.gallery-header,
+.blog-header,
+.article-header {
+    padding: 0 0 30px 0;
+    @media (min-width: 1025px) {
+        padding: 0 0 30px 170px;
+    }
+    @media (min-width: 1201px) {
+        padding: 0 0 30px 210px;
+    }
+    @media (min-width: 1367px) {
+        //padding-left: 210px;
+    }
+    @media (min-width: 1601px) {
+        padding-left: 0;
+    }
+}
