--- a/app/scss/modules/_footer.scss
+++ b/app/scss/modules/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
-    padding: 100px 0 50px 0;
+    //padding: 100px 0 50px 0;
     //background: linear-gradient(90deg, rgba(0, 0, 0, .1), hsla(0, 0%, 80%, 0) 40%), linear-gradient(270deg, rgba(0, 0, 0, .1), hsla(0, 0%, 50.2%, 0) 47.55%);
     background: #f5f5f4;
     color: #0D0D0D;
