--- a/app/scss/modules/_page-article.scss
+++ b/app/scss/modules/_page-article.scss
@@ -1,6 +1,6 @@
 .article-header {
     background: #F5F5F4;
-    padding: 0 0 40px;
+    padding-bottom: 40px;
     .mobile-logo {
         top: 100px;
         @media (max-width: 576px) {
@@ -43,12 +43,14 @@
 }
 
 .article-content {
-    box-shadow: 7px 7px 15px rgba(0, 0, 0, 0.15);
+    background: #F5F5F4;
     .container {
         @media (min-width: 1025px) {
-            padding: 60px 70px;
+            padding-top: 60px;
+            padding-bottom: 70px;
         }
         background: #FFFFFF;
+        box-shadow: 7px 7px 15px rgba(0, 0, 0, 0.15);
     }
     .date {
         font-size: 16px;
