--- a/app/scss/modules/_page-blog.scss
+++ b/app/scss/modules/_page-blog.scss
@@ -1,6 +1,6 @@
 .blog-header {
     background: #F5F5F4;
-    padding: 0 0 40px 0;
+    padding-bottom: 40px;
     .mobile-logo {
         top: 100px;
         @media (max-width: 576px) {
@@ -32,7 +32,8 @@
 }
 
 .blog {
-    padding: 0 0 0 0;
+    padding-top: 0;
+    padding-bottom: 0;
     background: #F5F5F4;
 }
 
