--- a/app/scss/modules/_page-gallery-opened.scss
+++ b/app/scss/modules/_page-gallery-opened.scss
@@ -1,7 +1,7 @@
 .gallery-opened-body {
     .gallery-header {
+        padding-bottom: 40px;
         background: #F5F5F4;
-        padding: 0 0 30px 0;
         .arrow-btn--left {
             color: #423C3A;
             margin: 20px 0 20px;
@@ -46,11 +46,149 @@
             }
         }
     }
+    .lg-download {
+        display: none !important;
+    }
+    .lg-close {
+        background: #F5F5F4 !important;
+        border-radius: 50%;
+        cursor: pointer;
+        transition: all .3s;
+        position: relative;
+        margin: 20px;
+        width: 40px !important;
+        height: 40px !important;
+        @media (min-width: 1025px) {
+            width: 75px !important;
+            height: 75px !important;
+        }
+        &:before {
+            content: '' !important;
+            @include size(1px, 25px);
+            @include pos($t: 7px, $r: 20px);
+            transform: rotate(45deg);
+            background: #514947;
+        }
+        &:after {
+            content: ''!important;
+            @include size(1px, 25px);
+            @include pos($t: 7px, $r: 20px);
+            transform: rotate(-45deg);
+            background: #514947;
+        }
+        &:before,
+        &:after {
+            @media (min-width: 1025px) {
+                @include pos($t: 14px, $r: 36px);
+                @include size(2px, 45px)
+            }
+        }
+    }
+    .lg-icon {
+        //@include size(40px);
+        border-radius: 50% !important;
+        content: '';
+    }
+    .lg-prev {
+        width: 40px !important;
+        height: 40px !important;
+        background: #FFF3A6 !important;
+        @media (min-width: 1025px) {
+            width: 75px !important;
+            height: 75px !important;
+        }
+        &:before {
+            content: "" !important;
+            display: block;
+            width: 14px;
+            height: 2px;
+            background: #423c3a;
+            transform: rotate(-45deg);
+            @include pos($t: 15px, $r: 15px);
+            @media (min-width: 1025px) {
+                width: 22.5px;
+                top: 38%;
+                right: 45%;
+            }
+            // @media (min-width: 1025px) {
+            //     @include pos($b: 50%, $l: 50%);
+            //     transform: translateX(-50%) translateY(50%);
+            //     @include size(125%, auto);
+            // }
+        }
+        &::after {
+            content: "" !important;
+            display: block;
+            width: 14px;
+            height: 2px;
+            background: #423c3a;
+            transform: rotate(45deg);
+            @include pos($t: 24px, $r: 15px);
+            @media (min-width: 1025px) {
+                width: 22.5px;
+                top: 58%;
+                right: 45%;
+            }
+            // @media (min-width: 1025px) {
+            //     @include pos($b: 50%, $l: 50%);
+            //     transform: translateX(-50%) translateY(50%);
+            //     @include size(125%, auto);
+            // }
+        }
+    }
+    .lg-next {
+        width: 40px !important;
+        height: 40px !important;
+        background: #FFF3A6 !important;
+        @media (min-width: 1025px) {
+            width: 75px !important;
+            height: 75px !important;
+        }
+        &:before {
+            content: "" !important;
+            display: block;
+            width: 14px;
+            height: 2px;
+            background: #423c3a;
+            transform: rotate(45deg);
+            @include pos($t: 15px, $l: 15px);
+            @media (min-width: 1025px) {
+                width: 22.5px;
+                top: 38%;
+                left: 45%;
+            }
+            // @media (min-width: 1025px) {
+            //     @include pos($b: 50%, $l: 50%);
+            //     transform: translateX(-50%) translateY(50%);
+            //     @include size(125%, auto);
+            // }
+        }
+        &::after {
+            content: "" !important;
+            display: block;
+            width: 14px;
+            height: 2px;
+            background: #423c3a;
+            transform: rotate(-45deg);
+            @include pos($t: 24px, $l: 15px);
+            @media (min-width: 1025px) {
+                width: 22.5px;
+                top: 58%;
+                left: 45%;
+            }
+            // @media (min-width: 1025px) {
+            //     @include pos($b: 50%, $l: 50%);
+            //     transform: translateX(-50%) translateY(50%);
+            //     @include size(125%, auto);
+            // }
+        }
+    }
 }
 
 .gallery-opened-content {
     background: #F5F5F4;
-    padding: 0;
+    padding-top: 0;
+    padding-bottom: 0;
     .container {
         padding: 0 0 30px;
     }
@@ -106,146 +244,4 @@
     // &:nth-child(3) {
     //     height: 315px;
     // }
-}
-
-.lg-download {
-    display: none !important;
-}
-
-.lg-close {
-    background: #F5F5F4 !important;
-    border-radius: 50%;
-    cursor: pointer;
-    transition: all .3s;
-    position: relative;
-    margin: 20px;
-    width: 40px !important;
-    height: 40px !important;
-    @media (min-width: 1025px) {
-        width: 75px !important;
-        height: 75px !important;
-    }
-    &:before {
-        content: '' !important;
-        @include size(1px, 25px);
-        @include pos($t: 7px, $r: 20px);
-        transform: rotate(45deg);
-        background: #514947;
-    }
-    &:after {
-        content: ''!important;
-        @include size(1px, 25px);
-        @include pos($t: 7px, $r: 20px);
-        transform: rotate(-45deg);
-        background: #514947;
-    }
-    &:before,
-    &:after {
-        @media (min-width: 1025px) {
-            @include pos($t: 14px, $r: 36px);
-            @include size(2px, 45px)
-        }
-    }
-}
-
-.lg-icon {
-    //@include size(40px);
-    border-radius: 50% !important;
-    content: '';
-}
-
-.lg-prev {
-    width: 40px !important;
-    height: 40px !important;
-    background: #FFF3A6 !important;
-    @media (min-width: 1025px) {
-        width: 75px !important;
-        height: 75px !important;
-    }
-    &:before {
-        content: "" !important;
-        display: block;
-        width: 14px;
-        height: 2px;
-        background: #423c3a;
-        transform: rotate(-45deg);
-        @include pos($t: 15px, $r: 15px);
-        @media (min-width: 1025px) {
-            width: 22.5px;
-            top: 38%;
-            right: 45%;
-        }
-        // @media (min-width: 1025px) {
-        //     @include pos($b: 50%, $l: 50%);
-        //     transform: translateX(-50%) translateY(50%);
-        //     @include size(125%, auto);
-        // }
-    }
-    &::after {
-        content: "" !important;
-        display: block;
-        width: 14px;
-        height: 2px;
-        background: #423c3a;
-        transform: rotate(45deg);
-        @include pos($t: 24px, $r: 15px);
-        @media (min-width: 1025px) {
-            width: 22.5px;
-            top: 58%;
-            right: 45%;
-        }
-        // @media (min-width: 1025px) {
-        //     @include pos($b: 50%, $l: 50%);
-        //     transform: translateX(-50%) translateY(50%);
-        //     @include size(125%, auto);
-        // }
-    }
-}
-
-.lg-next {
-    width: 40px !important;
-    height: 40px !important;
-    background: #FFF3A6 !important;
-    @media (min-width: 1025px) {
-        width: 75px !important;
-        height: 75px !important;
-    }
-    &:before {
-        content: "" !important;
-        display: block;
-        width: 14px;
-        height: 2px;
-        background: #423c3a;
-        transform: rotate(45deg);
-        @include pos($t: 15px, $l: 15px);
-        @media (min-width: 1025px) {
-            width: 22.5px;
-            top: 38%;
-            left: 45%;
-        }
-        // @media (min-width: 1025px) {
-        //     @include pos($b: 50%, $l: 50%);
-        //     transform: translateX(-50%) translateY(50%);
-        //     @include size(125%, auto);
-        // }
-    }
-    &::after {
-        content: "" !important;
-        display: block;
-        width: 14px;
-        height: 2px;
-        background: #423c3a;
-        transform: rotate(-45deg);
-        @include pos($t: 24px, $l: 15px);
-        @media (min-width: 1025px) {
-            width: 22.5px;
-            top: 58%;
-            left: 45%;
-        }
-        // @media (min-width: 1025px) {
-        //     @include pos($b: 50%, $l: 50%);
-        //     transform: translateX(-50%) translateY(50%);
-        //     @include size(125%, auto);
-        // }
-    }
 }
