--- a/app/scss/modules/_page-object.scss
+++ b/app/scss/modules/_page-object.scss
@@ -22,11 +22,6 @@
 
 .object-header {
     background: #F5F5F4;
-    padding: 0 0 30px 0;
-    @media (max-width: 768px) {
-        //background: #FFFFFF;
-        background: #F5F5F4;
-    }
     .mobile-logo {
         top: 100px;
         @media (max-width: 576px) {
@@ -58,11 +53,7 @@
 }
 
 .object-content {
-    background: rgba(229, 229, 229, .5);
-    @media (max-width: 768px) {
-        background: #F5F5F4;
-    }
-    padding: 0;
+    background: #f5f5f4;
     .container {
         padding: 0;
         @media (min-width: 1025px) {
@@ -263,12 +254,14 @@
             margin: 0;
         }
         img {
-            @include size(100%, auto);
-            @media (min-width: 1025px) {
-                @include pos($b: 50%, $l: 50%);
-                transform: translateX(-50%) translateY(50%);
-                @include size(125%, auto);
-            }
+            min-height: 100%;
+            min-width: 100%;
+            max-width: 120%;
+            // @media (min-width: 1025px) {
+            //     @include pos($b: 50%, $l: 50%);
+            //     transform: translateX(-50%) translateY(50%);
+            //     @include size(125%, auto);
+            // }
         }
         .icon {
             margin: 7.5px 0 0 7.5px;
