--- a/app/scss/modules/_sidebar.scss
+++ b/app/scss/modules/_sidebar.scss
@@ -24,22 +24,10 @@
             @media (max-width: 1366px) {
                 padding: 50px 40px 45vh;
             }
-            @media (max-width: 1366px) {
-                padding: 50px 20px 45vh;
-            }
-            @media (max-width: 960px) {
-                padding: 50px 10px 45vh;
-            }
-            @media (max-width: 576px) {
-                display: none;
-            }
-            @media (max-width: 576px) {
-                display: none;
-            }
-            @media (min-width: 768px) and (orientation: portrait) {
-                display: none;
-            }
-            @media (max-width: 812px) and (orientation: landscape) {
+            // @media (max-width: 960px) {
+            //     padding: 50px 10px 45vh;
+            // }
+            @media (max-width: 1023px) {
                 display: none;
             }
         }
