modal window close button fix;

--- a/app/layout/footer.html
+++ b/app/layout/footer.html
@@ -9,7 +9,7 @@
         <svg>
           <use xlink:href="images/main-page_icons-sprite.svg#logo"></use>
         </svg></a></div>
-    <div class="footer-contacts"><a class="footer-link" href="mailto:angrobud@gmail.com"> angrobud@gmail.com</a><a class="footer-link" href="tel:+380509915883">+38(050) 991-58-83</a><a class="footer-link" href="tel:+380509915883">+38(050) 991-58-82</a></div>
+    <div class="footer-contacts"><a class="footer-link" href="mailto:angrobud@gmail.com"> angrobud@gmail.com</a><a class="footer-link" href="tel:+380509915883">+38(050) 991-58-83</a><a class="footer-link" href="tel:+380509915882">+38(050) 991-58-82</a><a class="footer-link" href="tel:+380509915880">+38(050) 991-58-80</a></div>
     <div class="footer-newsletter">
       <!--FORM START-->
       <form class="footer-newsletter__form" action="">
