--- a/app/pug/layout/confidentiality-policy.pug
+++ b/app/pug/layout/confidentiality-policy.pug
@@ -1,7 +1,9 @@
 .policy
     .policy__content
         .container
-            
+            .btn-policy__close
+                .policy__close
+                    p Закрыть
             h5 Политика конфиденциальности
             p Политика конфиденциальности действует в отношении персональных данных, предоставляемых клиентами компании, как для оказания различного рода услуг, так и осуществления иного взаимодействия, как правило, в электронном формате, а также при участии клиентов в акциях компании, оказании технической поддержки клиенту и обслуживанию клиентов.
             p Согласие на обработку персональных данных Клиент даетнажимая кнопку «Отправить запрос», и обязуется принять правила настоящей политики конфиденциальности. Согласие дается на обработку персональных данных, как без использования средств автоматизации, так и с их использованием.Согласие дается, в том числе на возможные информационные (рекламные) оповещения (в т. ч. осуществления информационных рассылок, рассылок о маркетинговых мероприятиях, специальных предложениях и акциях посредством SMS и e-mail).
@@ -50,5 +52,4 @@
             h5 Права пользователей в отношении персональных данных
             p Все клиенты в случае изъявления желания прекратить обработку их персональных данных могут обратиться .
 
-            .policy__close
-                p Закрыть
+            
