--- a/app/scss/modules/_footer.scss
+++ b/app/scss/modules/_footer.scss
@@ -25,10 +25,17 @@
         grid-row: 1 / 2;
         display: flex;
         flex-direction: column;
-        align-content: flex-end;
+        align-content: center;
         text-align: right;
         justify-content: flex-start;
         padding: 1.5rem 0 0 0;
+        font-family: Century Gothic;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 19px;
+        line-height: 23px;
+        text-align: right;
+        line-height: 1.75rem;
         &__title {
             text-transform: uppercase;
         }
@@ -92,11 +99,10 @@
         grid-row: 1 / 2;
         display: flex;
         flex-direction: column;
-        align-content: flex-start;
+        align-content: center;
         justify-content: flex-start;
         padding: 1.5rem 0 0 0;
-        margin: 20px 0 0 0;
-        font-size: 24px;
+        font-size: 20px;
         @media (max-width: 576px) {
             grid-column: 1 / 13;
             grid-row: 2 / 3;
