--- a/app/scss/modules/_page-blog.scss
+++ b/app/scss/modules/_page-blog.scss
@@ -49,6 +49,7 @@
     }
     .information {
         grid-row: 1/3;
+        min-height: 500px;
         &__headline {
             padding: 0;
             margin: 0 0 1rem 0;
@@ -80,10 +81,10 @@
             line-height: 20px;
             @media (min-width: 1025px) {
                 font-family: Bellota Text;
-                font-style: italic;
+                font-style: normal;
                 font-weight: normal;
-                font-size: 24px;
-                line-height: 30px;
+                font-size: 20px;
+                line-height: 28px;
             }
         }
     }
@@ -118,7 +119,8 @@
             //margin: 0 25px;
             display: block;
             background: transparent;
-            line-height: 20px;
+            line-height: 32px;
+            font-size: 18px;
             tbody {
                 display: flex;
                 flex-direction: column;
@@ -133,15 +135,16 @@
         }
         th {
             font-weight: bold;
-            font-size: 14px;
             background: #FFF3A6;
             text-align: left;
             padding: 0 0 0 5px;
+            text-align: center;
         }
         td {
             margin: 0;
             padding: 0 0 0 5px;
             background: #FFF3A6;
+            text-align: center;
         }
     }
     .photo {
@@ -149,6 +152,15 @@
         height: 280px;
         position: relative;
         overflow: hidden;
+        background: url("/images/blog/defult.jpg") center center no-repeat;
+        background-size: cover;
+        &:hover {
+            img {
+                //transform: scale(-8);
+                width: 110%;
+                box-shadow: inset 14px 3px 170px -82px rgba(0, 0, 0, 0.75);
+            }
+        }
         @media (min-width: 1025px) {
             grid-row: 1/2;
             grid-column: 2/3;
@@ -157,11 +169,14 @@
             margin: 0;
         }
         .img {
-            @include size(100%, auto);
+            @include size(100%,
+            auto);
+            transition: .3s ease-in-out;
             @media (min-width: 1025px) {
                 @include pos($b: 50%, $l: 50%);
                 transform: translateX(-50%) translateY(50%);
-                @include size(115%, auto);
+                @include size(115%,
+                auto);
             }
         }
     }
